adjust css images

--- a/app/views/pages/faxian.scala.html
+++ b/app/views/pages/faxian.scala.html
@@ -59,7 +59,7 @@ title =  "发现喜欢_"+ cate +"_"+tag +"_食美特，爱美食爱生活"
                             <!-- 用户评论 -->
                             <div class="user-list">
 
-                                    <div class="like-user">
+                                    <div class="share-user">
                                         <a class="fl" href="@controllers.users.routes.Users.home(user.id.get)"><img class="avt32 fl" src="@user.pic" alt="@user.name" width="30" height="30"></a>
                                         <div class="info">
                                             <a class="go-to-comment" href="@controllers.routes.Goods.view(goods.id.get)#J_CommentTxa" target="_blank">评论</a>
