--- a/app/views/users/theme.scala.html
+++ b/app/views/users/theme.scala.html
@@ -42,7 +42,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                             <div class="theme-item @if(((i+1)%3)==0){last} ">
                                 <div class="theme-pic clearfix">
 
-                                    <a href="@controllers.routes.Themes.view(item._1._1)" class="pic" target="_blank">
+                                    <a href="@controllers.routes.Themes.subject(item._1._1)" class="pic" target="_blank">
                                             @for((img,i)<-item._2.view.zipWithIndex){
                                               @if(i==0){
                                         <img class="b-img"  @if(!img.isEmpty){src='@(img.get+"_210x210.jpg")' width="210"height="210"}else {src="/assets/ui/blank.gif"} >
@@ -54,7 +54,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
 
                                     </a>
                                 </div>
-                                <h3><a href="@controllers.routes.Themes.view(item._1._1)" target="_blank">@item._1._2</a></h3>
+                                <h3><a href="@controllers.routes.Themes.subject(item._1._1)" target="_blank">@item._1._2</a></h3>
                                 <div class="theme-state">
                                    @if(t=="love"){
                                     <div style="float: left" class="followed-btn">已关注<span class="mr5 ml5">|</span>
