--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -82,8 +82,8 @@ nav="index"
         <dl class="first">
             <dt>
             <div class="title-wrap clearfix">
-                <h2 class="title clearfix"><a href='@controllers.routes.Pages.find("美食","tag",1)' target="_blank">美食</a></h2>
-                <div class="title-desc"><a href='@controllers.routes.Pages.find("美食","tag",1)' target="_blank">&nbsp;•&nbsp;每日精选</a></div>
+                <h2 class="title clearfix"><a href='@controllers.routes.Pages.faxian("美食","tag",1,1)' target="_blank">美食</a></h2>
+                <div class="title-desc"><a href='@controllers.routes.Pages.faxian("美食","tag",1,1)' target="_blank">&nbsp;•&nbsp;每日精选</a></div>
             </div>
             <div class="tag-wrap clearfix">
                 @Html(meishiTags.content.getOrElse(""))
@@ -164,8 +164,8 @@ nav="index"
         <dl class="first">
             <dt>
             <div class="title-wrap clearfix">
-                <h2 class="title clearfix"><a href='@controllers.routes.Pages.find("特产","tag",1)' target="_blank">特产</a></h2>
-                <div class="title-desc"><a href='@controllers.routes.Pages.find("特产","tag",1)' target="_blank">&nbsp;•&nbsp;每日精选</a></div>
+                <h2 class="title clearfix"><a href='@controllers.routes.Pages.faxian("特产","tag",1,1)' target="_blank">特产</a></h2>
+                <div class="title-desc"><a href='@controllers.routes.Pages.faxian("特产","tag",1,1)' target="_blank">&nbsp;•&nbsp;每日精选</a></div>
             </div>
             <div class="tag-wrap clearfix">
                 @Html(techanTags.content.getOrElse(""))
@@ -246,8 +246,8 @@ nav="index"
         <dl class="first">
             <dt>
             <div class="title-wrap clearfix">
-                <h2 class="title clearfix"><a href='@controllers.routes.Pages.find("居家","tag",1)' target="_blank">居家</a></h2>
-                <div class="title-desc"><a href='@controllers.routes.Pages.find("居家","tag",1)' target="_blank">&nbsp;•&nbsp;每日精选</a></div>
+                <h2 class="title clearfix"><a href='@controllers.routes.Pages.faxian("居家","tag",1,1)' target="_blank">居家</a></h2>
+                <div class="title-desc"><a href='@controllers.routes.Pages.faxian("居家","tag",1,1)' target="_blank">&nbsp;•&nbsp;每日精选</a></div>
             </div>
             <div class="tag-wrap clearfix">
                 @Html(jujiaTags.content.getOrElse(""))
@@ -328,8 +328,8 @@ nav="index"
         <dl class="first">
             <dt>
             <div class="title-wrap clearfix">
-                <h2 class="title clearfix" style="font-size: 30px"><a href='@controllers.routes.Pages.find("好玩意","tag",1)' target="_blank">好玩意</a></h2>
-                <div class="title-desc"><a href='@controllers.routes.Pages.find("好玩意","tag",1)' target="_blank">&nbsp;•&nbsp;每日精选</a></div>
+                <h2 class="title clearfix" style="font-size: 30px"><a href='@controllers.routes.Pages.faxian("好玩意","tag",1,1)' target="_blank">好玩意</a></h2>
+                <div class="title-desc"><a href='@controllers.routes.Pages.faxian("好玩意","tag",1,1)' target="_blank">&nbsp;•&nbsp;每日精选</a></div>
             </div>
             <div class="tag-wrap clearfix">
                 @Html(haowanyiTags.content.getOrElse(""))
