--- a/app/views/pages/miss.scala.html
+++ b/app/views/pages/miss.scala.html
@@ -70,7 +70,7 @@ title = " 美食街_食美特，爱美食爱生活"
     <div class="group clearfix">
         @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-meishiThemes.view.zipWithIndex){
         <div class="item @if((i+1)%4==0){last}">
-            <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
+            <a href="@controllers.routes.Themes.subject(themeId)" title="@themeName" class="pic" target="_blank">
                 @for((pic,i)<-pics.view.zipWithIndex){
                 @if(i==0){
                 <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")' alt="@themeName">
@@ -81,7 +81,7 @@ title = " 美食街_食美特，爱美食爱生活"
 
             </a>
             <h3 class="ofh">
-                <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
+                <a href="@controllers.routes.Themes.subject(themeId)" target="_blank">@themeName</a>
             </h3>
 
             <div class="info" >@themeIntro</div>
@@ -105,7 +105,7 @@ title = " 美食街_食美特，爱美食爱生活"
         <div class="group clearfix">
             @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-techanThemes.view.zipWithIndex){
             <div class="item @if((i+1)%4==0){last}">
-                <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
+                <a href="@controllers.routes.Themes.subject(themeId)" title="@themeName" class="pic" target="_blank">
                     @for((pic,i)<-pics.view.zipWithIndex){
                     @if(i==0){
                     <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")' alt="@themeName">
@@ -116,7 +116,7 @@ title = " 美食街_食美特，爱美食爱生活"
 
                 </a>
                 <h3 class="ofh">
-                    <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
+                    <a href="@controllers.routes.Themes.subject(themeId)" target="_blank">@themeName</a>
                 </h3>
 
                 <div class="info" >@themeIntro</div>
@@ -141,7 +141,7 @@ title = " 美食街_食美特，爱美食爱生活"
         <div class="group clearfix">
             @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<- zibuThemes.view.zipWithIndex){
             <div class="item @if((i+1)%4==0){last}">
-                <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
+                <a href="@controllers.routes.Themes.subject(themeId)" title="@themeName" class="pic" target="_blank">
                     @for((pic,i)<-pics.view.zipWithIndex){
                     @if(i==0){
                     <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")' alt="@themeName">
@@ -152,7 +152,7 @@ title = " 美食街_食美特，爱美食爱生活"
 
                 </a>
                 <h3 class="ofh">
-                    <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
+                    <a href="@controllers.routes.Themes.subject(themeId)" target="_blank">@themeName</a>
                 </h3>
 
                 <div class="info" >@themeIntro</div>
@@ -176,7 +176,7 @@ title = " 美食街_食美特，爱美食爱生活"
         <div class="group clearfix">
             @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<- jujiaThemes.view.zipWithIndex){
             <div class="item @if((i+1)%4==0){last}">
-                <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
+                <a href="@controllers.routes.Themes.subject(themeId)" title="@themeName" class="pic" target="_blank">
                     @for((pic,i)<-pics.view.zipWithIndex){
                     @if(i==0){
                     <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")' alt="@themeName">
@@ -187,7 +187,7 @@ title = " 美食街_食美特，爱美食爱生活"
 
                 </a>
                 <h3 class="ofh">
-                    <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
+                    <a href="@controllers.routes.Themes.subject(themeId)" target="_blank">@themeName</a>
                 </h3>
 
                 <div class="info" >@themeIntro</div>
@@ -211,7 +211,7 @@ title = " 美食街_食美特，爱美食爱生活"
     <div class="group clearfix">
         @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-haowanyiThemes.view.zipWithIndex){
         <div class="item @if((i+1)%4==0){last}">
-            <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
+            <a href="@controllers.routes.Themes.subject(themeId)" title="@themeName" class="pic" target="_blank">
                 @for((pic,i)<-pics.view.zipWithIndex){
                 @if(i==0){
                 <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")' alt="@themeName">
@@ -222,7 +222,7 @@ title = " 美食街_食美特，爱美食爱生活"
 
             </a>
             <h3 class="ofh">
-                <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
+                <a href="@controllers.routes.Themes.subject(themeId)" target="_blank">@themeName</a>
             </h3>
 
             <div class="info" >@themeIntro</div>
