--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -51,13 +51,13 @@
             <ul class="channel clearfix">
                 <li class=' @("on".when(nav == "index")) '><a href="/">首页</a></li>
                 <li><span>-</span></li>
-                <li class='@("on".when(nav == "美食"))'><a href='@controllers.routes.Pages.find("美食","tag",1)'>美食</a></li>
-                <li class='@("on".when(nav == "特产"))'><a href='@controllers.routes.Pages.find("特产","tag",1)'>特产</a></li>
-                <li  class='@("on".when(nav == "居家"))'><a href='@controllers.routes.Pages.find("居家","tag",1)'>居家</a></li>
-                <li  class='@("on".when(nav == "好玩意"))'><a href='@controllers.routes.Pages.find("好玩意","tag",1)'>好玩意</a></li>
+                <li class='@("on".when(nav == "美食"))'><a href='@controllers.routes.Pages.faxian("美食","tag",1,1)'>美食</a></li>
+                <li class='@("on".when(nav == "特产"))'><a href='@controllers.routes.Pages.faxian("特产","tag",1,1)'>特产</a></li>
+                <li  class='@("on".when(nav == "居家"))'><a href='@controllers.routes.Pages.faxian("居家","tag",1,1)'>居家</a></li>
+                <li  class='@("on".when(nav == "好玩意"))'><a href='@controllers.routes.Pages.faxian("好玩意","tag",1,1)'>好玩意</a></li>
                 <li><span>-</span></li>
                 <li  class='choice @("on".when(nav == "choice"))'><a href='@controllers.routes.Pages.choice'>天天特价</a></li>
-                <li class= 'china'>  <a class='@("on".when(nav == "china"))' href="/china" >中国风</a> </li>
+               <!-- <li class= 'china'>  <a class='@("on".when(nav == "china"))' href="/china" >中国风</a> </li>-->
                 <li><span>-</span></li>
                 <li class='@("on".when(nav == "forum"))'><a href="@controllers.routes.Forums.forum(1)" >讨论吧</a></li>
                 <li><span>-</span></li>
