--- a/app/views/users/baobei.scala.html
+++ b/app/views/users/baobei.scala.html
@@ -34,17 +34,68 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
 					<a rel="shareGoods" class="bbl-btn ml10" href="javascript:;">+ 分享宝贝</a>
 					</span>
                 </div>
-                <ul class="goods-list clearfix">
+
+                <div class="goods-list clearfix" id="J_GoodsWall">
                     @for((goods,i)<-page.items.view.zipWithIndex){
-                    <li class="clearfix @if((i+1)%3==0){last}" >
-                        <div class="goods-item">
-                            <div class="goods-pic">
-                                <a class="pic-link" target="_blank" href="@controllers.routes.Goods.view(goods.id.get)">
-                                    <img src='@(goods.pic+"_210x210.jpg")' alt="@goods.name">
-                                </a>
-                              <!--  @if(!user.isEmpty && user.get.id==author.id){
+                    <div class="goods-item @if((i+1)%3==0){last}">
+                        <div class="pic" style='height:210px '>
+                            <a href="@controllers.routes.Goods.view(goods.id.get)" target="_blank">
+                                <img width="210px" alt="@goods.name" title="@goods.name" src="@goods.pic" >
+                            </a>
+                            <a  href="@controllers.routes.Goods.view(goods.id.get)" class="goods_title">@goods.name</a>
+
+                        </div>
+                        <div class="goods-wrap">
+                            <div class="price">
+                                <span>￥@goods.price</span>
+                                <div class="like-state">
+                                    <a rel="followGoods" href="javascript:void(0)" data-proid="@goods.id.get">
+                                        <i class="ico-likes"  title="喜欢"></i>
+                                    </a>
+                                    <div class="like-num">
+                                        <dl class="J_scrollUp" style="top: 0px;">
+                                            <dd class="J_FavorNum" data-val="@goods.loveNum">@goods.loveNum</dd>
+                                            <dd>+1</dd>
+                                        </dl>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="user-comment">
+                                <div class="comment clearfix">
+                                    <!-- 用户评论 -->
+                                    <div class="user-list">
+
+                                        <div class="share-user">
+
+                                            <div class="info">
+                                                <a class="go-to-comment" href="@controllers.routes.Goods.view(goods.id.get)#J_CommentTxa" style="display: none" target="_blank">评论</a>
+
+                                                <a href="@controllers.routes.Goods.view(goods.id.get)" target="_blank"><p>@goods.intro</p></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- 用户评论 end -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    }
+                </div>
+
+
+
+                <!-- <ul class="goods-list clearfix">
+                     @for((goods,i)<-page.items.view.zipWithIndex){
+                     <li class="clearfix @if((i+1)%3==0){last}" >
+                         <div class="goods-item">
+                             <div class="goods-pic">
+                                 <a class="pic-link" target="_blank" href="@controllers.routes.Goods.view(goods.id.get)">
+                                     <img src='@(goods.pic+"_210x210.jpg")' alt="@goods.name">
+                                 </a>
+                               &lt;!&ndash;  @if(!user.isEmpty && user.get.id==author.id){
                                 <a class="ilike-del" href="javascript:;" data-type="@t" data-proid="@goods.id.get">喜欢-1</a>
-                                }-->
+                                }&ndash;&gt;
                             </div>
                             <div class="goods-title ofh inlineblock">
                                 @goods.name
@@ -61,6 +112,9 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
 
 
                 </ul>
+                -->
+
+
                 <div class="clearfix pt20 pb20">
                     <div class="pagin fr pagination" id="J_Pagination">
                         @if(page.nums.length>1){
