--- a/app/views/users/home.scala.html
+++ b/app/views/users/home.scala.html
@@ -43,44 +43,38 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                 }else{  Ta 很懒，还没有分享宝贝  }
 
         }else{
-        <ul class="goods-list clearfix">
+        <div class="goods-list clearfix" id="J_GoodsWall">
             @for((goods,i)<-goodses.items.view.zipWithIndex){
-            <li class="clearfix @if((i+1)%3==0){last}" >
-                <div class="goods-item">
-                    <div class="goods-pic">
-                        <a class="pic-link" target="_blank" href="@controllers.routes.Goods.view(goods.id.get)">
-                            <img src='@(goods.pic+"_210x210.jpg")' alt="@goods.name">
-                        </a>
-                       <!-- @if(!user.isEmpty && user.get.id==author.id){
-                        <a class="ilike-del"  href="javascript:;" data-type="share" data-proid="@goods.id.get">喜欢-1</a>
-                         }-->
-                        @(user.isEmpty || user.get.id != author.id){
-                        <div class="like-common like-common-s" id="J_likeCommon156391">
-                            <a  class="like" rel="followGoods" href="javascript:void(0)" data-proid="@goods.id.get" title="喜欢"><i>喜欢</i></a>
+            <div class="goods-item @if((i+1)%3==0){last}">
+                <div class="pic" style='height:210px '>
+                    <a href="@controllers.routes.Goods.view(goods.id.get)" target="_blank">
+                        <img width="210px" alt="@goods.name" title="@goods.name" src="@goods.pic" >
+                    </a>
+                    <a  href="@controllers.routes.Goods.view(goods.id.get)" class="goods_title">@goods.name</a>
+
+                </div>
+                <div class="goods-wrap">
+                    <div class="price">
+                        <span>￥@goods.price</span>
+                        <div class="like-state">
+                            <a rel="followGoods" href="javascript:void(0)" data-proid="@goods.id.get">
+                                <i class="ico-likes"  title="喜欢"></i>
+                            </a>
                             <div class="like-num">
-                                <dl class="J_scrollUp">
+                                <dl class="J_scrollUp" style="top: 0px;">
                                     <dd class="J_FavorNum" data-val="@goods.loveNum">@goods.loveNum</dd>
                                     <dd>+1</dd>
                                 </dl>
                             </div>
                         </div>
-                        }
+                    </div>
 
-                    </div>
-                    <div class="goods-title ofh inlineblock">
-                        @goods.name
-                    </div>
-                    <div class="goods-stat">
-                        <span class="mr10">@goods.loveNum</span>
-                        <span>￥@goods.price</span>
-                    </div>
                 </div>
+            </div>
 
-
-            </li>
             }
+        </div>
 
-        </ul>
         }
     </div>
     <!--baobei box end-->
@@ -103,7 +97,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
             <div class="theme-item @if(((i+1)%3)==0){last} ">
                 <div class="theme-pic clearfix">
 
-                    <a href="@controllers.routes.Themes.view(item._1._1)" class="pic" target="_blank">
+                    <a href="@controllers.routes.Themes.subject(item._1._1)" class="pic" target="_blank">
                         @for((img,i)<-item._2.view.zipWithIndex){
                         @if(i==0){
                         <img class="b-img"  @if(!img.isEmpty){src='@(img.get+"_210x210.jpg")' width="210"height="210"}else {src="/assets/ui/blank.gif"} >
@@ -115,7 +109,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
 
                     </a>
                 </div>
-                <h3><a href="@controllers.routes.Themes.view(item._1._1)" target="_blank">@item._1._2</a></h3>
+                <h3><a href="@controllers.routes.Themes.subject(item._1._1)" target="_blank">@item._1._2</a></h3>
                 <div class="theme-state">
                     <span>@item._1._4 人关注</span>
                 </div>
@@ -139,21 +133,21 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
     <div class="title">跟@if(!user.isEmpty && user.get.id==author.id){我}else{Ta}相关的标签</div>
     <ul class="clearfix">
 
-        <li><a class="ofh" href='@controllers.routes.Pages.find("美食","进口食品",1)'>进口食品</a></li>
-        <li class="focus"><a class="ofh" href='@controllers.routes.Pages.find("特产","台湾特产",1)'>台湾特产</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.find("特产","新建特产",1)'>新建特产</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.find("美食","粗粮",1)'>粗粮</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.find("美食","手工美食",1)'>手工美食</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.find("居家","摆件",1)'>摆件</a></li>
-        <li class="focus"><a class="ofh" href='@controllers.routes.Pages.find("居家","zakka",1)'>zakka</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.find("居家","马克杯",1)'>马克杯</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.find("居家","绿植",1)'>绿植</a></li>
-        <li class="focus"><a class="ofh" href='@controllers.routes.Pages.find("居家","小夜灯",1)'>小夜灯</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.find("居家","陶瓷",1)'>陶瓷</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.find("居家","收纳",1)'>收纳</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.find("居家","床上用品",1)'>床上用品</a></li>
-        <li class="focus"><a class="ofh" href='@controllers.routes.Pages.find("好玩意","萌物",1)'>萌物</a></li>
-        <li class="focus"><a class="ofh" href='@controllers.routes.Pages.find("好玩意","创意",1)'>创意</a></li>
+        <li><a class="ofh" href='@controllers.routes.Pages.faxian("美食","进口食品",1,1)'>进口食品</a></li>
+        <li class="focus"><a class="ofh" href='@controllers.routes.Pages.faxian("特产","台湾特产",1,1)'>台湾特产</a></li>
+        <li><a class="ofh" href='@controllers.routes.Pages.faxian("特产","新建特产",1,1)'>新建特产</a></li>
+        <li><a class="ofh" href='@controllers.routes.Pages.faxian("美食","粗粮",1,1)'>粗粮</a></li>
+        <li><a class="ofh" href='@controllers.routes.Pages.faxian("美食","手工美食",1,1)'>手工美食</a></li>
+        <li><a class="ofh" href='@controllers.routes.Pages.faxian("居家","摆件",1,1)'>摆件</a></li>
+        <li class="focus"><a class="ofh" href='@controllers.routes.Pages.faxian("居家","zakka",1,1)'>zakka</a></li>
+        <li><a class="ofh" href='@controllers.routes.Pages.faxian("居家","马克杯",1,1)'>马克杯</a></li>
+        <li><a class="ofh" href='@controllers.routes.Pages.faxian("居家","绿植",1,1)'>绿植</a></li>
+        <li class="focus"><a class="ofh" href='@controllers.routes.Pages.faxian("居家","小夜灯",1,1)'>小夜灯</a></li>
+        <li><a class="ofh" href='@controllers.routes.Pages.faxian("居家","陶瓷",1,1)'>陶瓷</a></li>
+        <li><a class="ofh" href='@controllers.routes.Pages.faxian("居家","收纳",1,1)'>收纳</a></li>
+        <li><a class="ofh" href='@controllers.routes.Pages.faxian("居家","床上用品",1,1)'>床上用品</a></li>
+        <li class="focus"><a class="ofh" href='@controllers.routes.Pages.faxian("好玩意","萌物",1,1)'>萌物</a></li>
+        <li class="focus"><a class="ofh" href='@controllers.routes.Pages.faxian("好玩意","创意",1,1)'>创意</a></li>
     </ul>
 </div>
 
