--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -1767,6 +1767,143 @@ a:hover i.ico-likes {
     background: url(images/like_h.png) no-repeat;
     _background: url(images/ico_ilike.png) no-repeat -3px -40px
 }
+
+/*  goods view */
+.goods-contents{
+
+    clear: both;
+    margin: 0 auto 50px auto;
+    text-align: center;
+}
+.goods-item{
+    float: left;
+    border: 1px #fff solid;
+    display: inline;
+    text-align: left;
+    position: relative;
+    width: 210px;
+    padding: 9px;
+    background: #fff;
+    margin-right: 20px;
+    height: 380px;
+    overflow: hidden;
+}
+.goods-item .pic{
+    width: 210px;
+    overflow: hidden;
+    text-align: center;
+    position: relative;
+    background: 0;
+}
+.goods-item .pic img {
+    vertical-align: top;
+}
+.goods-item .goods_title {
+    display: block;
+    text-indent: -9999em;
+    height: 0;
+}
+.goods-item .goods-wrap {
+
+}
+.goods-item .price {
+    position: relative;
+    color: #000;
+    background-color: #fff;
+    margin: 10px auto;
+    width: 120px;
+    height: 24px;
+    line-height: 24px;
+    overflow: hidden;
+}
+.goods-item .price span {
+    float: left;
+    margin-left: 10px;
+    overflow: hidden;
+    width: 57px;
+}
+.goods-item .price .like-state {
+    width: 50px;
+    float: right;
+}
+.goods-item .price a {
+    color: #000;
+    float: left;
+}
+.goods-item .price .like-state .like-num {
+    height: 24px;
+    overflow: hidden;
+    text-align: left;
+    padding-left: 5px;
+    position: relative;
+}
+.goods-item .price .like-state .like-num dl {
+    position: relative;
+}
+.goods-item .price .like-state .like-num dl dd {
+    width: 21px;
+    height: 24px;
+}
+.goods-item .price .like-state .like-num dl dd {
+    width: 21px;
+    height: 24px;
+}
+
+
+.goods-item .user-comment {
+    background: #fff;
+}
+
+
+.goods-item a:hover{
+    text-decoration: none;
+}
+
+.goods-item .comment {
+    margin-top: -5px
+}
+
+
+.goods-item .comment .user-list {
+    margin-bottom: 0;
+    margin-top: 10px
+}
+.goods-item .comment .user-list .share-user {
+    margin-top: 12px;
+    margin-bottom: 10px;
+    background: url(images/dot2.png) repeat-x bottom
+}
+.goods-item .comment .user-list .share-user .fl {
+    margin-top: 4px;
+}
+.goods-item .comment .user-list .share-user .info {
+    min-height: 21px;
+    padding: 5px 10px 20px 10px;
+    margin: 0 0 0 38px;
+}
+.goods-item  .comment .user-list .share-user .info .go-to-comment {
+    float: right;
+    padding-right: 8px;
+    padding-left: 12px;
+    /* color: #588C0E;*/
+    color: #e0bca5;
+    cursor: pointer;
+}
+.goods-item .comment .user-list .share-user p {
+    color: #666;
+    word-break: break-all;
+    height: 58px;
+    overflow: hidden;
+}
+
+.goods-item .comment a {
+    color: #444
+}
+
+.last{
+    margin-right: 0;
+}
+
 /* 全局 头部样式*/
 /*
  * 样式文件
