--- a/app/views/users/commission/myCredits.scala.html
+++ b/app/views/users/commission/myCredits.scala.html
@@ -16,7 +16,7 @@ user
         <div class="main-content">
             <div class="credits mb20">
                 <div class="credits_info">您已经获得<span>@user.get.credits</span>个集分宝，值<span>￥@(user.get.credits/100.0)</span>元， 已成功发放<span>@user.get.withdrawCredits</span>个集分宝 </div>
-                <div class="title">集分宝发放记录</div>
+                <div class="title">集分宝 - 淘宝购物发放记录</div>
             <table class="table">
                 <thead>
                 <tr  height="35">
