--- a/app/views/users/commission/invite.scala.html
+++ b/app/views/users/commission/invite.scala.html
@@ -7,6 +7,7 @@ user
         <div class="side-nav">
             <h2>帐号设置</h2>
             <ul>
+                <li> <a  href="@controllers.users.routes.UsersCommission.myOrders(1,1)">购买记录</a> </li>
                 <li><a href="@controllers.users.routes.UsersCommission.myCredits(1)">我的集分宝</a></li>
                 <li><a href="@controllers.users.routes.UsersCommission.myShiDou(1)">我的食豆</a></li>
                 <li><a href="@controllers.users.routes.UsersCommission.myAward">我的奖品</a></li>
@@ -23,7 +24,6 @@ user
                         <li>2、邀请好友必须是新用户（即以前没登录过食美特，或者没有注册过食美特），如果她已是食美特老用户了，那么是没有奖励的</li>
                         <li>3、您可以把您的专用邀请链接通过任何方式发给您的朋友，例如，QQ好友，qq群、阿里旺旺、论坛、社区等</li>
                         <li>4、邀请奖金分3次发放：当好友的集分宝累计达到100个时奖200个；当集分宝累计达到1000个时再奖300个；当集分宝累计达到5000个集分宝时再奖500个集分宝；</li>
-
                         <li><strong class="alert">禁作弊提醒</strong>：严禁自己邀请自己、刷小号等作弊行为，一旦反作弊系统监测到作弊行为，将拉黑账号处理，邀请也无效</li>
 
                 </ul>
