--- a/public/assets/css/template/user.setting.css
+++ b/public/assets/css/template/user.setting.css
@@ -209,7 +209,7 @@
     zoom: 1;
     padding-left:20px
 }
-.invite .title ,.credits .title,.shiDou .title  {
+.invite .title ,.credits .title,.shiDou .title, .orders .title  {
     font-size: 16px;
     display: block;
     margin-bottom:5px;
@@ -433,10 +433,10 @@ table {
 
 
 /*我的集分宝*/
-.credits,.shiDou{
+.credits,.shiDou,.orders{
     margin-left: 20px;
 }
-.credits .credits_info, .shiDou .shiDou_info {
+.credits .credits_info, .shiDou .shiDou_info,.orders .orders_info, {
     background: #fdf6ea;
     padding: 0 0 0 20px;
     display: block;
@@ -446,13 +446,19 @@ table {
     color: #333
 }
 
-.credits .credits_info span,.shiDou .shiDou_info span {
+.credits .credits_info span,.shiDou .shiDou_info span,.orders .credits_info span {
     font-size: 14px;
     padding: 0 5px;
     color: #f32a6b;
     font-weight: 700;
 }
-
+/* orders */
+  .orders .title{
+      float: left;
+      padding: 15px 10px 5px 0;
+      height: 20px;
+      line-height: 20px;
+  }
 
 /*help*/
 .help {
