--- a/app/views/pages/miss.scala.html
+++ b/app/views/pages/miss.scala.html
@@ -64,8 +64,8 @@ title = " 美食街_食美特，爱美食爱生活"
     <!-- 美食主题推荐-->
      <div class="category clearfix">
     <div class="hd clearfix">
-        <h2 class="fl"><a href='@controllers.routes.Pages.gallery(0,"new",1)'>美食</a></h2>
-        <a class="fr" href='@controllers.routes.Pages.gallery(0,"new",1)'>更多&gt;&gt;</a>
+        <h2 class="fl"><a href='@controllers.routes.Pages.gallery(0,1,1)'>美食</a></h2>
+        <a class="fr" href='@controllers.routes.Pages.gallery(0,1,1)'>更多&gt;&gt;</a>
     </div>
     <div class="group clearfix">
         @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-meishiThemes.view.zipWithIndex){
@@ -99,8 +99,8 @@ title = " 美食街_食美特，爱美食爱生活"
     <!-- 特产主题推荐-->
     <div class="category clearfix">
         <div class="hd clearfix">
-            <h2 class="fl"><a href='@controllers.routes.Pages.gallery(1,"new",1)'>特产</a></h2>
-            <a class="fr" href='@controllers.routes.Pages.gallery(1,"new",1)'>更多&gt;&gt;</a>
+            <h2 class="fl"><a href='@controllers.routes.Pages.gallery(1,1,1)'>特产</a></h2>
+            <a class="fr" href='@controllers.routes.Pages.gallery(1,1,1)'>更多&gt;&gt;</a>
         </div>
         <div class="group clearfix">
             @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-techanThemes.view.zipWithIndex){
@@ -135,8 +135,8 @@ title = " 美食街_食美特，爱美食爱生活"
     <!-- 滋补主题推荐-->
     <div class="category clearfix">
         <div class="hd clearfix">
-            <h2 class="fl"><a href='@controllers.routes.Pages.gallery(2,"new",1)'>滋补</a></h2>
-            <a class="fr" href='@controllers.routes.Pages.gallery(2,"new",1)'>更多&gt;&gt;</a>
+            <h2 class="fl"><a href='@controllers.routes.Pages.gallery(2,1,1)'>滋补</a></h2>
+            <a class="fr" href='@controllers.routes.Pages.gallery(2,1,1)'>更多&gt;&gt;</a>
         </div>
         <div class="group clearfix">
             @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<- zibuThemes.view.zipWithIndex){
@@ -170,8 +170,8 @@ title = " 美食街_食美特，爱美食爱生活"
     <!-- 居家主题推荐-->
     <div class="category clearfix">
         <div class="hd clearfix">
-            <h2 class="fl"><a href='@controllers.routes.Pages.gallery(3,"new",1)'>居家</a></h2>
-            <a class="fr" href='@controllers.routes.Pages.gallery(3,"new",1)'>更多&gt;&gt;</a>
+            <h2 class="fl"><a href='@controllers.routes.Pages.gallery(3,1,1)'>居家</a></h2>
+            <a class="fr" href='@controllers.routes.Pages.gallery(3,1,1)'>更多&gt;&gt;</a>
         </div>
         <div class="group clearfix">
             @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<- jujiaThemes.view.zipWithIndex){
@@ -205,8 +205,8 @@ title = " 美食街_食美特，爱美食爱生活"
 <!-- 好玩意主题推荐-->
 <div class="category clearfix">
     <div class="hd clearfix">
-        <h2 class="fl"><a href='@controllers.routes.Pages.gallery(6,"new",1)'>好玩意</a></h2>
-        <a class="fr" href='@controllers.routes.Pages.gallery(6,"new",1)'>更多&gt;&gt;</a>
+        <h2 class="fl"><a href='@controllers.routes.Pages.gallery(6,1,1)'>好玩意</a></h2>
+        <a class="fr" href='@controllers.routes.Pages.gallery(6,1,1)'>更多&gt;&gt;</a>
     </div>
     <div class="group clearfix">
         @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-haowanyiThemes.view.zipWithIndex){
