--- a/app/views/themes/board.scala.html
+++ b/app/views/themes/board.scala.html
@@ -106,7 +106,7 @@ description = theme.intro.get
 			<span class="pos-l-txt gc6">返回：
     	    	        <a href='@controllers.routes.Pages.miss'>美食街</a>
     	    	        <span class="ml5 mr5">/</span>
-                        <a href='@controllers.routes.Pages.gallery(theme.cid,"new",1)'>@models.Cate(theme.cid)</a>
+                        <a href='@controllers.routes.Pages.gallery(theme.cid,1,1)'>@models.Cate(theme.cid)</a>
 
                         </span>
     </div>
