--- a/app/views/pages/gallery.scala.html
+++ b/app/views/pages/gallery.scala.html
@@ -1,4 +1,4 @@
-@(user:Option[models.user.User],flashes:List[models.advert.Advert],page:models.Page[((Long,String,String,Int),List[String])],cid:Int,sortBy:String)
+@(user:Option[models.user.User],flashes:List[models.advert.Advert],page:models.Page[((Long,String,String,Int),List[String])],cid:Int,s:Int)
 @views.html.template(
 user,
 nav="miss",
@@ -52,13 +52,13 @@ title = "美食街,特色馆_食美特，爱美食爱生活"
     </div>
 
     <div class="category clearfix">
-        <div class="hd clearfix">
-            <h2 class="fl"><a href='@controllers.routes.Pages.gallery(cid,"new",1)'>@models.Cate(cid)</a></h2>
-            <h3 class="fl"><span> -- </span>
-              @if(sortBy == "new"){<span>最新</span>}else{ <a href='@controllers.routes.Pages.gallery(cid,"new",1)'>最新</a> }
-                @if(sortBy == "hot"){<span>最热</span>}else{ <a href='@controllers.routes.Pages.gallery(cid,"hot",1)'>最热</a> }
-            </h3>
-
+        <div class="filter-wrap clearfix">
+            <h2>@models.Cate(cid)</h2>
+            <div class="theme-filter">
+                <a type="list_new_most" href='@controllers.routes.Pages.gallery(cid,1,1)'  @if(s==1){class=" current"}><span>最新</span></a>
+                <a type="list_hot_most"  href='@controllers.routes.Pages.gallery(cid,2,1)'  @if(s==2){class=" current"}><span>最热</span></a>
+            </div>
+            <i></i>
         </div>
         <div class="group clearfix">
             @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-page.items.view.zipWithIndex){
@@ -90,6 +90,27 @@ title = "美食街,特色馆_食美特，爱美食爱生活"
     </div>
 
 
+    <div class="tac mt20">
+        <div class="pagin inlineblock clearfix" id="J_Pagination">
+            @if(page.nums.length>1){
+            @page.prev.map { page =>
+            <a class="prev" href="@controllers.routes.Pages.gallery(cid,s,page)">上一页</a>
+            }
+            @for(num <-page.nums){
+            @if(num==page.currentPage){
+            <span class="current">@num</span>
+            }else {
+            <a href="@controllers.routes.Pages.gallery(cid,s,num)">@num</a>
+            }
+            }
+            @page.next.map { page =>
+            <a class="next" href="@controllers.routes.Pages.gallery(cid,s,page)">下一页</a>
+
+            }
+
+            }
+        </div>
+    </div>
 
 </div>
 
