--- a/public/assets/css/template/miss.css
+++ b/public/assets/css/template/miss.css
@@ -118,6 +118,74 @@
 }
 
 
+/* sort  */
+.filter-wrap {
+    margin: 20px 0;
+    padding: 0;
+    position: relative;
+}
+
+.filter-wrap h2 {
+    float: left;
+    font-size: 18px;
+    border-left: 5px solid #5c6f09;
+    background-color: #588c0e;
+    border-right: 5px solid #5c6f09;
+    height: 20px;
+    line-height: 20px;
+    padding: 0 7px;
+    color: #fff;
+    display: inline;
+}
+
+.filter-wrap i {
+    width: 980px;
+    height: 20px;
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    background: url(images/site_dotted.png) repeat-x center
+}
+
+.theme-filter {
+    float: left;
+    padding-left: 15px
+}
+
+.theme-filter a {
+    float: left;
+    margin: 0 10px 0 0;
+    background: #ececec;
+    height: 20px;
+    padding: 0 10px;
+    line-height: 20px;
+    white-space: nowrap;
+    color: #808285;
+    -moz-border-radius: 30px;
+    -webkit-border-radius: 30px;
+    border-radius: 30px
+}
+
+.theme-filter a:hover {
+    text-decoration: none;
+    color: #fff;
+    background: #588C0E
+}
+
+.theme-filter a.current {
+    background: #588C0E;
+    color: #fff
+}
+
+.filter-wrap #bdshare {
+    position: absolute;
+    right: 0;
+    top: -5px;
+    background-color: #fff
+}
+
 .category {width:950px;background:#fff;padding:15px; margin: 0 auto 20px;}
 .category .group{overflow: hidden;}
 .category .hd{ margin-bottom:6px;overflow:hidden;padding: 0 10px}
