--- a/app/views/pages/china.scala.html
+++ b/app/views/pages/china.scala.html
@@ -8,7 +8,7 @@ title =  "特色中国_食美特，爱美食爱生活"
 <div class="container clearfix" id="china">
 
     <div class="china-top">
-
+<img src="/assets/temp/china-style.jpg">
     </div>
 
     <section class="filter-wrap clearfix">
