--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -23,7 +23,7 @@
             <div class="hd-left">
                 <a href="/" class="logo">
                     <span class="logo-img"> <img src="/assets/ui/logo.png"></span>
-                    <span class="logo-intro">&nbsp;•&nbsp;爱美食爱生活</span>
+                    <span class="logo-intro">&nbsp;•&nbsp;美食&nbsp;•&nbsp生活&nbsp;•&nbsp社区</span>
                 </a>
 
             </div>
@@ -62,7 +62,7 @@
                 <li class='@("on".when(nav == "miss"))'>  <a href="@controllers.routes.Pages.miss" >主题</a> </li>
                 <li><span>-</span></li>
                 <li class='@("on".when(nav == "forum"))'><a href="@controllers.routes.Forums.forum(1)" >讨论吧</a></li>
-
+                <li class='@("on".when(nav == "site"))'><a href="@controllers.routes.Pages.site" >小站</a></li>
             </ul>
             <!-- 签到 -->
                 <a class="btn-checkIn fr" href="javascript:;" rel="checkIn">签到</a>
