--- a/app/views/forums/view.scala.html
+++ b/app/views/forums/view.scala.html
@@ -59,12 +59,12 @@ description =  topic._2.intro
                     <div class="oper clearfix">
                         <div class="share-link">
                             <label class="fl l20 gc">分享到：</label>
-                            <a class="s-sina" href="javascript:;" alt="分享到新浪微博">新浪微博</a>
-                            <a class="s-qzone" href="javascript:;" alt="分享到QQ空间">QQ空间</a>
-                            <a class="s-tencent" href="javascript:;" alt="分享到腾讯微博">腾讯微博</a>
-                            <a class="s-douban" href="javascript:;" alt="分享到豆瓣">豆瓣</a>
-                         <a class="s-renren" href="javascript:;" alt="分享到人人网">人人网</a>
-                         <a class="s-163" href="javascript:;" alt="分享到网易微博">网易微博</a>
+                            <a class="s-sina" href="javascript:;" alt="分享到新浪微博"></a>
+                            <a class="s-qzone" href="javascript:;" alt="分享到QQ空间"></a>
+                            <a class="s-tencent" href="javascript:;" alt="分享到腾讯微博"></a>
+                            <a class="s-douban" href="javascript:;" alt="分享到豆瓣"></a>
+                         <a class="s-renren" href="javascript:;" alt="分享到人人网"></a>
+                         <a class="s-163" href="javascript:;" alt="分享到网易微博"></a>
                         </div>
                     </div>
                 </li>
