--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -23,7 +23,7 @@
             <div class="hd-left">
                 <a href="/" class="logo">
                     <span class="logo-img"> <img src="/assets/ui/logo.png"></span>
-                    <span class="logo-intro">&nbsp;•&nbsp;美食&nbsp;•&nbsp生活&nbsp;•&nbsp社区</span>
+                    <span class="logo-intro">美食&nbsp;生活&nbsp;社区</span>
                 </a>
 
             </div>
